y.output

state 0
	$accept: .root $end 

	LABEL  shift 13
	LANGLE  shift 6
	SEND  shift 5
	CASE  shift 8
	CLOSE  shift 9
	LET  shift 4
	FORWARD  shift 10
	SELF  shift 12
	PRINT  shift 11
	.  error

	expression  goto 3
	name  goto 7
	root  goto 1
	program  goto 2

state 1
	$accept:  root.$end 

	$end  accept
	.  error


state 2
	root:  program.    (1)

	.  reduce 1 (src line 37)


state 3
	program:  expression.    (2)

	.  reduce 2 (src line 40)


state 4
	program:  LET.functions IN processes END 
	functions: .    (8)

	SPRC  shift 15
	.  reduce 8 (src line 53)

	functions  goto 14

state 5
	expression:  SEND.name LANGLE name COMMA name RANGLE 

	LABEL  shift 13
	SELF  shift 12
	.  error

	name  goto 16

state 6
	expression:  LANGLE.name COMMA name RANGLE LEFT_ARROW RECEIVE name SEQUENCE expression 
	expression:  LANGLE.name COMMA name RANGLE LEFT_ARROW SPLIT name SEQUENCE expression 

	LABEL  shift 13
	SELF  shift 12
	.  error

	name  goto 17

state 7
	expression:  name.DOT LABEL LANGLE name RANGLE 
	expression:  name.LEFT_ARROW NEW LPAREN expression RPAREN SEQUENCE expression 
	expression:  name.LEFT_ARROW NEW expression SEQUENCE expression 

	LEFT_ARROW  shift 19
	DOT  shift 18
	.  error


state 8
	expression:  CASE.name LPAREN branches RPAREN 

	LABEL  shift 13
	SELF  shift 12
	.  error

	name  goto 20

state 9
	expression:  CLOSE.name 

	LABEL  shift 13
	SELF  shift 12
	.  error

	name  goto 21

state 10
	expression:  FORWARD.name name 

	LABEL  shift 13
	SELF  shift 12
	.  error

	name  goto 22

state 11
	expression:  PRINT.name 

	LABEL  shift 13
	SELF  shift 12
	.  error

	name  goto 23

state 12
	name:  SELF.    (25)

	.  reduce 25 (src line 90)


state 13
	name:  LABEL.    (26)

	.  reduce 26 (src line 91)


state 14
	program:  LET functions.IN processes END 

	IN  shift 24
	.  error


state 15
	functions:  SPRC.expression 

	LABEL  shift 13
	LANGLE  shift 6
	SEND  shift 5
	CASE  shift 8
	CLOSE  shift 9
	FORWARD  shift 10
	SELF  shift 12
	PRINT  shift 11
	.  error

	expression  goto 25
	name  goto 7

state 16
	expression:  SEND name.LANGLE name COMMA name RANGLE 

	LANGLE  shift 26
	.  error


state 17
	expression:  LANGLE name.COMMA name RANGLE LEFT_ARROW RECEIVE name SEQUENCE expression 
	expression:  LANGLE name.COMMA name RANGLE LEFT_ARROW SPLIT name SEQUENCE expression 

	COMMA  shift 27
	.  error


state 18
	expression:  name DOT.LABEL LANGLE name RANGLE 

	LABEL  shift 28
	.  error


state 19
	expression:  name LEFT_ARROW.NEW LPAREN expression RPAREN SEQUENCE expression 
	expression:  name LEFT_ARROW.NEW expression SEQUENCE expression 

	NEW  shift 29
	.  error


state 20
	expression:  CASE name.LPAREN branches RPAREN 

	LPAREN  shift 30
	.  error


state 21
	expression:  CLOSE name.    (16)

	.  reduce 16 (src line 68)


state 22
	expression:  FORWARD name.name 

	LABEL  shift 13
	SELF  shift 12
	.  error

	name  goto 31

state 23
	expression:  PRINT name.    (19)

	.  reduce 19 (src line 74)


state 24
	program:  LET functions IN.processes END 

	SPRC  shift 35
	PRC  shift 34
	.  error

	processes  goto 32
	process  goto 33

state 25
	functions:  SPRC expression.    (9)

	.  reduce 9 (src line 54)


state 26
	expression:  SEND name LANGLE.name COMMA name RANGLE 

	LABEL  shift 13
	SELF  shift 12
	.  error

	name  goto 36

state 27
	expression:  LANGLE name COMMA.name RANGLE LEFT_ARROW RECEIVE name SEQUENCE expression 
	expression:  LANGLE name COMMA.name RANGLE LEFT_ARROW SPLIT name SEQUENCE expression 

	LABEL  shift 13
	SELF  shift 12
	.  error

	name  goto 37

state 28
	expression:  name DOT LABEL.LANGLE name RANGLE 

	LANGLE  shift 38
	.  error


state 29
	expression:  name LEFT_ARROW NEW.LPAREN expression RPAREN SEQUENCE expression 
	expression:  name LEFT_ARROW NEW.expression SEQUENCE expression 

	LABEL  shift 13
	LPAREN  shift 39
	LANGLE  shift 6
	SEND  shift 5
	CASE  shift 8
	CLOSE  shift 9
	FORWARD  shift 10
	SELF  shift 12
	PRINT  shift 11
	.  error

	expression  goto 40
	name  goto 7

state 30
	expression:  CASE name LPAREN.branches RPAREN 
	branches: .    (20)

	LABEL  shift 42
	.  reduce 20 (src line 82)

	branches  goto 41

state 31
	expression:  FORWARD name name.    (17)

	.  reduce 17 (src line 70)


state 32
	program:  LET functions IN processes.END 

	END  shift 43
	.  error


state 33
	processes:  process.processes 
	processes:  process.    (5)

	SPRC  shift 35
	PRC  shift 34
	.  reduce 5 (src line 48)

	processes  goto 44
	process  goto 33

state 34
	process:  PRC.LSBRACK names RSBRACK COLON expression 

	LSBRACK  shift 45
	.  error


state 35
	process:  SPRC.LSBRACK names RSBRACK COLON expression 

	LSBRACK  shift 46
	.  error


state 36
	expression:  SEND name LANGLE name.COMMA name RANGLE 

	COMMA  shift 47
	.  error


state 37
	expression:  LANGLE name COMMA name.RANGLE LEFT_ARROW RECEIVE name SEQUENCE expression 
	expression:  LANGLE name COMMA name.RANGLE LEFT_ARROW SPLIT name SEQUENCE expression 

	RANGLE  shift 48
	.  error


state 38
	expression:  name DOT LABEL LANGLE.name RANGLE 

	LABEL  shift 13
	SELF  shift 12
	.  error

	name  goto 49

state 39
	expression:  name LEFT_ARROW NEW LPAREN.expression RPAREN SEQUENCE expression 

	LABEL  shift 13
	LANGLE  shift 6
	SEND  shift 5
	CASE  shift 8
	CLOSE  shift 9
	FORWARD  shift 10
	SELF  shift 12
	PRINT  shift 11
	.  error

	expression  goto 50
	name  goto 7

state 40
	expression:  name LEFT_ARROW NEW expression.SEQUENCE expression 

	SEQUENCE  shift 51
	.  error


state 41
	expression:  CASE name LPAREN branches.RPAREN 
	branches:  branches.PIPE LABEL LANGLE name RANGLE RIGHT_ARROW expression 

	RPAREN  shift 52
	PIPE  shift 53
	.  error


state 42
	branches:  LABEL.LANGLE name RANGLE RIGHT_ARROW expression 

	LANGLE  shift 54
	.  error


state 43
	program:  LET functions IN processes END.    (3)

	.  reduce 3 (src line 42)


state 44
	processes:  process processes.    (4)

	.  reduce 4 (src line 47)


state 45
	process:  PRC LSBRACK.names RSBRACK COLON expression 

	LABEL  shift 13
	SELF  shift 12
	.  error

	name  goto 56
	names  goto 55

state 46
	process:  SPRC LSBRACK.names RSBRACK COLON expression 

	LABEL  shift 13
	SELF  shift 12
	.  error

	name  goto 56
	names  goto 57

state 47
	expression:  SEND name LANGLE name COMMA.name RANGLE 

	LABEL  shift 13
	SELF  shift 12
	.  error

	name  goto 58

state 48
	expression:  LANGLE name COMMA name RANGLE.LEFT_ARROW RECEIVE name SEQUENCE expression 
	expression:  LANGLE name COMMA name RANGLE.LEFT_ARROW SPLIT name SEQUENCE expression 

	LEFT_ARROW  shift 59
	.  error


state 49
	expression:  name DOT LABEL LANGLE name.RANGLE 

	RANGLE  shift 60
	.  error


state 50
	expression:  name LEFT_ARROW NEW LPAREN expression.RPAREN SEQUENCE expression 

	RPAREN  shift 61
	.  error


state 51
	expression:  name LEFT_ARROW NEW expression SEQUENCE.expression 

	LABEL  shift 13
	LANGLE  shift 6
	SEND  shift 5
	CASE  shift 8
	CLOSE  shift 9
	FORWARD  shift 10
	SELF  shift 12
	PRINT  shift 11
	.  error

	expression  goto 62
	name  goto 7

state 52
	expression:  CASE name LPAREN branches RPAREN.    (13)

	.  reduce 13 (src line 62)


state 53
	branches:  branches PIPE.LABEL LANGLE name RANGLE RIGHT_ARROW expression 

	LABEL  shift 63
	.  error


state 54
	branches:  LABEL LANGLE.name RANGLE RIGHT_ARROW expression 

	LABEL  shift 13
	SELF  shift 12
	.  error

	name  goto 64

state 55
	process:  PRC LSBRACK names.RSBRACK COLON expression 

	RSBRACK  shift 65
	.  error


state 56
	names:  name.    (23)
	names:  name.COMMA names 

	COMMA  shift 66
	.  reduce 23 (src line 87)


state 57
	process:  SPRC LSBRACK names.RSBRACK COLON expression 

	RSBRACK  shift 67
	.  error


state 58
	expression:  SEND name LANGLE name COMMA name.RANGLE 

	RANGLE  shift 68
	.  error


state 59
	expression:  LANGLE name COMMA name RANGLE LEFT_ARROW.RECEIVE name SEQUENCE expression 
	expression:  LANGLE name COMMA name RANGLE LEFT_ARROW.SPLIT name SEQUENCE expression 

	RECEIVE  shift 69
	SPLIT  shift 70
	.  error


state 60
	expression:  name DOT LABEL LANGLE name RANGLE.    (12)

	.  reduce 12 (src line 60)


state 61
	expression:  name LEFT_ARROW NEW LPAREN expression RPAREN.SEQUENCE expression 

	SEQUENCE  shift 71
	.  error


state 62
	expression:  name LEFT_ARROW NEW expression SEQUENCE expression.    (15)

	.  reduce 15 (src line 66)


state 63
	branches:  branches PIPE LABEL.LANGLE name RANGLE RIGHT_ARROW expression 

	LANGLE  shift 72
	.  error


state 64
	branches:  LABEL LANGLE name.RANGLE RIGHT_ARROW expression 

	RANGLE  shift 73
	.  error


state 65
	process:  PRC LSBRACK names RSBRACK.COLON expression 

	COLON  shift 74
	.  error


state 66
	names:  name COMMA.names 

	LABEL  shift 13
	SELF  shift 12
	.  error

	name  goto 56
	names  goto 75

state 67
	process:  SPRC LSBRACK names RSBRACK.COLON expression 

	COLON  shift 76
	.  error


state 68
	expression:  SEND name LANGLE name COMMA name RANGLE.    (10)

	.  reduce 10 (src line 56)


state 69
	expression:  LANGLE name COMMA name RANGLE LEFT_ARROW RECEIVE.name SEQUENCE expression 

	LABEL  shift 13
	SELF  shift 12
	.  error

	name  goto 77

state 70
	expression:  LANGLE name COMMA name RANGLE LEFT_ARROW SPLIT.name SEQUENCE expression 

	LABEL  shift 13
	SELF  shift 12
	.  error

	name  goto 78

state 71
	expression:  name LEFT_ARROW NEW LPAREN expression RPAREN SEQUENCE.expression 

	LABEL  shift 13
	LANGLE  shift 6
	SEND  shift 5
	CASE  shift 8
	CLOSE  shift 9
	FORWARD  shift 10
	SELF  shift 12
	PRINT  shift 11
	.  error

	expression  goto 79
	name  goto 7

state 72
	branches:  branches PIPE LABEL LANGLE.name RANGLE RIGHT_ARROW expression 

	LABEL  shift 13
	SELF  shift 12
	.  error

	name  goto 80

state 73
	branches:  LABEL LANGLE name RANGLE.RIGHT_ARROW expression 

	RIGHT_ARROW  shift 81
	.  error


state 74
	process:  PRC LSBRACK names RSBRACK COLON.expression 

	LABEL  shift 13
	LANGLE  shift 6
	SEND  shift 5
	CASE  shift 8
	CLOSE  shift 9
	FORWARD  shift 10
	SELF  shift 12
	PRINT  shift 11
	.  error

	expression  goto 82
	name  goto 7

state 75
	names:  name COMMA names.    (24)

	.  reduce 24 (src line 88)


state 76
	process:  SPRC LSBRACK names RSBRACK COLON.expression 

	LABEL  shift 13
	LANGLE  shift 6
	SEND  shift 5
	CASE  shift 8
	CLOSE  shift 9
	FORWARD  shift 10
	SELF  shift 12
	PRINT  shift 11
	.  error

	expression  goto 83
	name  goto 7

state 77
	expression:  LANGLE name COMMA name RANGLE LEFT_ARROW RECEIVE name.SEQUENCE expression 

	SEQUENCE  shift 84
	.  error


state 78
	expression:  LANGLE name COMMA name RANGLE LEFT_ARROW SPLIT name.SEQUENCE expression 

	SEQUENCE  shift 85
	.  error


state 79
	expression:  name LEFT_ARROW NEW LPAREN expression RPAREN SEQUENCE expression.    (14)

	.  reduce 14 (src line 64)


state 80
	branches:  branches PIPE LABEL LANGLE name.RANGLE RIGHT_ARROW expression 

	RANGLE  shift 86
	.  error


state 81
	branches:  LABEL LANGLE name RANGLE RIGHT_ARROW.expression 

	LABEL  shift 13
	LANGLE  shift 6
	SEND  shift 5
	CASE  shift 8
	CLOSE  shift 9
	FORWARD  shift 10
	SELF  shift 12
	PRINT  shift 11
	.  error

	expression  goto 87
	name  goto 7

state 82
	process:  PRC LSBRACK names RSBRACK COLON expression.    (6)

	.  reduce 6 (src line 50)


state 83
	process:  SPRC LSBRACK names RSBRACK COLON expression.    (7)

	.  reduce 7 (src line 51)


state 84
	expression:  LANGLE name COMMA name RANGLE LEFT_ARROW RECEIVE name SEQUENCE.expression 

	LABEL  shift 13
	LANGLE  shift 6
	SEND  shift 5
	CASE  shift 8
	CLOSE  shift 9
	FORWARD  shift 10
	SELF  shift 12
	PRINT  shift 11
	.  error

	expression  goto 88
	name  goto 7

state 85
	expression:  LANGLE name COMMA name RANGLE LEFT_ARROW SPLIT name SEQUENCE.expression 

	LABEL  shift 13
	LANGLE  shift 6
	SEND  shift 5
	CASE  shift 8
	CLOSE  shift 9
	FORWARD  shift 10
	SELF  shift 12
	PRINT  shift 11
	.  error

	expression  goto 89
	name  goto 7

state 86
	branches:  branches PIPE LABEL LANGLE name RANGLE.RIGHT_ARROW expression 

	RIGHT_ARROW  shift 90
	.  error


state 87
	branches:  LABEL LANGLE name RANGLE RIGHT_ARROW expression.    (21)

	.  reduce 21 (src line 83)


state 88
	expression:  LANGLE name COMMA name RANGLE LEFT_ARROW RECEIVE name SEQUENCE expression.    (11)

	.  reduce 11 (src line 58)


state 89
	expression:  LANGLE name COMMA name RANGLE LEFT_ARROW SPLIT name SEQUENCE expression.    (18)

	.  reduce 18 (src line 72)


state 90
	branches:  branches PIPE LABEL LANGLE name RANGLE RIGHT_ARROW.expression 

	LABEL  shift 13
	LANGLE  shift 6
	SEND  shift 5
	CASE  shift 8
	CLOSE  shift 9
	FORWARD  shift 10
	SELF  shift 12
	PRINT  shift 11
	.  error

	expression  goto 91
	name  goto 7

state 91
	branches:  branches PIPE LABEL LANGLE name RANGLE RIGHT_ARROW expression.    (22)

	.  reduce 22 (src line 84)


42 terminals, 10 nonterminals
27 grammar rules, 92/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
59 working sets used
memory: parser 52/240000
51 extra closures
178 shift entries, 1 exceptions
41 goto entries
12 entries saved by goto default
Optimizer space used: output 131/240000
131 table entries, 20 zero
maximum spread: 42, maximum offset: 90
